# basyx-cpp-sdk

./: CMakeLists.txt  README.md
src/api/: CMakeLists.txt
src/api/basyx/api/: aas_api.h  submodel_api.h
src/api/basyx/api/enum/: content.cpp  content.h  depth.cpp  depth.h  extent.cpp  extent.h  level.cpp  level.h  output_modifier.h
src/api/basyx/api/impl/: aas_env_api.h  aas_env_submodel_api.cpp  aas_env_submodel_api.h
src/http/: CMakeLists.txt
src/http/basyxpp-http/: HttpHandler.cpp  HttpHandler.h  SubmodelHttpHandler.cpp  SubmodelHttpHandler.h  SubmodelRepositoryHttpHandler.cpp  SubmodelRepositoryHttpHandler.h  main.cpp
src/libaas/: CMakeLists.txt  sources.cmake
src/libaas/basyx/: administrativeInformation.h  assetadministrationshell.h  common_types.h  haskind.h  hassemantics.h  identifiable.h  identifier.cpp  identifier.h  key.cpp  key.h  labelType.cpp  labelType.h  referable.cpp  referable.h  reference.cpp  reference.h  resource.h  specificAssetId.h  submodel.h  versionRevisionType.cpp  versionRevisionType.h
src/libaas/basyx/asset/: assetinformation.h
src/libaas/basyx/base/: basyx_enum_base.h  elementcontainer.h  valuetypedefs.h
src/libaas/basyx/enums/: AssetKind.h  DataTypeDefinition.cpp  DataTypeDefinition.h  KeyElements.h  ModelingKind.cpp  ModelingKind.h  ReferenceTypes.cpp  ReferenceTypes.h
src/libaas/basyx/semantics/: hasDataSpecification.h
src/libaas/basyx/serialization/json/: deserializer.cpp  deserializer.h  serializer.cpp  serializer.h  serializer_fwd.h
src/libaas/basyx/serialization/xml/: xmldeserializer.cpp
src/libaas/basyx/submodelelement/: annotatedrelationshipelement.h  file.cpp  file.h  property.cpp  property.h  submodelelement.cpp  submodelelementcollection.h
src/util/: CMakeLists.txt  sources.cmake
src/util/basyx/util/optional/: optional.hpp
tests/tests_api/: CMakeLists.txt  test_aas_env.cpp  test_aas_env_submodel.cpp  test_aas_metamodel.cpp  test_submodel_metamodel.cpp
tests/tests_json/: CMakeLists.txt  test_runner.cpp
tests/tests_libaas/: CMakeLists.txt  test_basyx.cpp  test_copyable.cpp  test_elementcontainer.cpp  test_json.cpp  test_operations.cpp  test_property.cpp
